<?xml version="1.0"?>
<package format="2">
  <name>e0000000_controller</name>
  <version>0.0.0</version>
  <description>The sample_controller package</description>
  <maintainer email="hornet8.0homework@gmail.com">hornet8.0</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>control_toy</depend>
</package>
